@@ -1,5 +1,5 @@
 Package: copula
-Version: 0.99-3
+Version: 0.99-4
 Date: $Date$
 Revision: $Revision$
 Title: Multivariate Dependence with Copulas
